# workflow-orchestration-queue-romeo91

./: .ai-repository-summary.md  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-results-pester.xml
.devcontainer/: devcontainer.json
.github/.devcontainer/: devcontainer.json
.github/workflows/: orchestrator-agent.yml  validate-python.yml  validate.yml
docs/: deviations.md
docs/debrief/: project-setup-debrief.md  trace.md
docs/validation/: VALIDATION_REPORT_create-project-structure_20260504.md
plan_docs/: OS-APOW Architecture Guide v3.md  OS-APOW Development Plan v4.md  OS-APOW Implementation Specification v1.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
src/osapow/: __init__.py  main.py
src/osapow/api/: __init__.py  health.py  webhooks.py
src/osapow/core/: __init__.py  config.py  logging.py  security.py
src/osapow/interfaces/: __init__.py  i_task_queue.py
src/osapow/models/: __init__.py  github_events.py  work_item.py
src/osapow/services/: __init__.py  notifier.py  queue.py  sentinel.py
src/workflow_orchestration_queue/: __init__.py  main.py  notifier_service.py  orchestrator_sentinel.py
src/workflow_orchestration_queue/interfaces/: __init__.py  i_task_queue.py
src/workflow_orchestration_queue/models/: __init__.py  github_events.py  work_item.py
test/: test-opencode-run.sh
tests/: __init__.py  conftest.py  test_github_events.py  test_main.py  test_notifier_service.py  test_work_item.py
