[project]
name = "osapow"
version = "0.1.0"
description = "OS-APOW — Operational Status and Automated Processing of Workflows. A headless agentic orchestration platform."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "OS-APOW Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "redis>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "httpx>=0.27",           # used as async test client
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
osapow-api = "osapow.main:run_api"
osapow-sentinel = "osapow.services.sentinel:run_sentinel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Hatch (src-layout) ──────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/osapow"]

# ── Ruff ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["osapow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

# ── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "slow: marks slow tests (deselect with '-m \"not slow\"')",
]

# ── coverage ────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["osapow"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 30
